force-app/main/default/objects/LoginAsEventProxy__e.object
<CustomObject>
    <description>Proxy for standard LoginAsEventStream event. Since the native LoginAsEventStream does not support Apex or Flow subscribers we use this object as a proxy. An external Cometd client subscribes to LoginAsEventStream and republishes events verbatim to this object so they can be consumed on-platform by Apex and Flow subscribers. It&apos;s a workaround!</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>The application name in English. For example, Salesforce Internal Application, or Microsoft SOAP Toolkit.</description>
        <label>Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <description>The browser name and version if known. Possible values for the browser name are:
Chrome
Firefox
Safari
Unknown
For example, “Chrome 77”.</description>
        <label>Browser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatedOrganizationId__c</fullName>
        <description>Organization Id of the user who is logging in as another user. For example, 00Dxx0000001gEH</description>
        <label>DelegatedOrganizationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatedUsername__c</fullName>
        <description>Username of the admin who is logging in as another user. For example, admin@company.com</description>
        <label>DelegatedUsername</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDate__c</fullName>
        <description>The time and date of the event. For example, 2020-01-20T19:12:26.965Z. Milliseconds are the most granular setting.</description>
        <label>EventDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventIdentifier__c</fullName>
        <description>The unique ID of the event, which is shared with the corresponding storage object. For example, 0a4779b0-0da1-4619-a373-0a36991dff90. Use this field to correlate the event with its storage object. Also, use this field as the primary key in your queries.</description>
        <label>EventIdentifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginAsCategory__c</fullName>
        <description>Represents how the user logs in as another user. Possible values are:
OrgAdmin—An administrator logs in to Salesforce as an individual user. Depending on your org settings, the individual user grants login access to the administrator.
Community—A user who has been granted access to a Salesforce Experience Cloud site logs in.</description>
        <label>LoginAsCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginHistoryId__c</fullName>
        <description>Tracks a user session so you can correlate user activity with a particular login instance. The ID from the LoginHistory entity associated with this login event. For example, 0Yaxx0000000019.</description>
        <label>LoginHistoryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginKey__c</fullName>
        <description>The string that ties together all events in a given user’s login session. The session starts with a login event and ends with either a logout event or the user session expiring. For example, 8gHOMQu+xvjCmRUt.</description>
        <label>LoginKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginType__c</fullName>
        <description>The event’s type of login. For example, “Application.”</description>
        <label>LoginType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>The platform name and version that are used during the login event. If no platform name is available, “Unknown” is returned. Platform names are in English. For example, “Mac OSX”.</description>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <description>The user’s unique session ID. Use this value to identify all user events within a session. When a user logs out and logs in again, a new session is started. For LoginAsEvent, this field is usually null because the event is captured before a session is created.</description>
        <label>SessionKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionLevel__c</fullName>
        <description>Session-level security controls user access to features that support it, such as connected apps and reporting.</description>
        <label>SessionLevel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceIp__c</fullName>
        <description>The source IP address of the client logging in. For example, 126.7.4.2.</description>
        <label>SourceIp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetUrl__c</fullName>
        <description>The URL redirected to after logging in as another user succeeds.</description>
        <label>TargetUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>Unique ID that identifies the user who is being logged in as by the admin. For example, 005000000000123.</description>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>The category of user license of the user who is being logged in as by the admin. Each UserType is associated with one or more UserLicense records.</description>
        <label>UserType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username of the user who is being logged in as by the admin, in the format of admin@company.com.</description>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LoginAsEventProxy</label>
    <pluralLabel>LoginAsEventProxy</pluralLabel>
</CustomObject>